--- a/C09/ex01/Makefile
+++ b/C09/ex01/Makefile
@@ -1,26 +1,22 @@
-SRCS = srcs/ft_putchar.c srcs/ft_sawp.c srcs/ft_putstr.c srcs/strlen.c srcs/ft_strcmp.c
-OBJS = ${SRCS:.c=.o}
-INCS = includes
+CC = cc
+FLAGS = -Wall -Wextra -Werror
+SOUCRS = srcs/ft_putchar.c srcs/ft_putstr.c srcs/ft_strlen.c srcs/ft_strcmp.c srcs/ft_swap.c
 NAME = libft.a
+INCLUDES = includes
+REM = rm -f
 LIBC = ar rc
 LIBR = ranlib
-CC = gcc
-RM = rm -f
-CFLAGS = -Wall -Wextra -Werror
+OBJECTS = ${SOUCRS:.c=.o}
 
-.c.o:
-	${CC} ${CFLAGS} .c $< .o ${<:.c=.o} -I ${INCS}
-
-$NAME: ${OBJS}
-	${LIBC} ${NAME} ${OBJS}
-	${LIBR} ${NAME}
+.c.o: #%.o : %.c
+	${CC} ${FLAGS} -c $< -o ${<:.c=.o} -I ${INCLUDES}
 
 all: ${NAME}
-
+${NAME}: ${OBJECTS}
+	${LIBC} ${NAME} ${OBJECTS}
+	${LIBR} ${NAME}
 clean:
-	${RM} ${OBJS}
-
+	${REM} ${OBJECTS}
 fclean: clean
-	${CLEAN} ${NAME}
-
+	${REM} ${NAME}
 re: fclean all
